<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".SelectRegistrationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        app:cardCornerRadius="@dimen/thirty"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="@dimen/one_hundred_eighty"
                android:layout_height="@dimen/one_hundred_eighty"
                android:src="@drawable/app_logo_round"
                android:layout_marginTop="@dimen/ten"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/welcome_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_application"
                android:textSize="@dimen/twenty_five_sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="@dimen/ten"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_logo"
                />

            <Button
                android:id="@+id/donor_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donor_registration"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/twenty"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fifteen_sp"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginEnd="@dimen/ten"
                android:background="@drawable/button_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_tv"/>

            <Button
                android:id="@+id/recipient_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipient_registration"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/twenty"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fifteen_sp"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginEnd="@dimen/ten"
                android:background="@drawable/button_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donor_button"/>

            <TextView
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="@dimen/fifteen"
                android:layout_marginBottom="@dimen/twenty"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginEnd="@dimen/twenty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipient_button"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>